# mutcy

./: Cargo.toml  LICENSE  README.md  flake.nix
benches/: basic.rs
examples/: recursion.rs
src/: associnner.rs  callback.rs  lib.rs  meta.rs  own.rs  res.rs  seal.rs  signal.rs  weakres.rs
src/callback/: tests.rs
src/signal/: fractional_index.rs  inner.rs  tests.rs
tests/: test.rs
