[package]
name = "mutcy"
version = "0.5.0"
edition = "2024"
authors = ["Kevin Robert Stravers <kevin@stravers.net>"]
description = "Zero-cost safe mutable cyclic borrows using borrow relinquishing"
homepage = "https://github.com/kstrafe/mutcy"
repository = "https://github.com/kstrafe/mutcy"
keywords = ["zero-cost", "cyclic", "mutable", "borrow"]
license = "MIT"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "basic"
harness = false

[profile.release]
debug = true
lto = "fat"
